<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flytid</string>
    <string name="avinor">Flydata fra Avinor</string>
    <string name="loading">Laster data...</string>
    <string name="tracker_id">UA-24026287-2</string>

    <!-- Menu -->
    <string name="airport">Flyplass</string>
    <string name="arrival">Ankomster</string>
    <string name="departure">Avganger</string>
    <string name="updateInterval">Oppdateringsinterval</string>
    <string name="sync">Oppdater</string>
    
    <!-- Alert titles   -->
    <string name="chooseAirport">Velg flyplass</string>
    
    <!-- Table Headings   -->
    <string name="departures_NO">Avganger</string>
    <string name="departures_EN">Departures</string>
    <string name="destination_NO">Reisemål</string>
    <string name="destination_EN">Destination</string>
    <string name="from_NO">Fra</string>
    <string name="from_EN">From</string>
    <string name="arrivals_NO">Ankomster</string>
    <string name="arrivals_EN">Arrivals</string>
    <string name="flight_NO">Rute</string>
    <string name="flight_EN">Flight</string>
    <string name="gate_NO">Utgang</string>
    <string name="gate_EN">Gate</string>
    <string name="belt_NO">Belte</string>
    <string name="belt_EN">Belt</string>
    <string name="remarks_NO">Merknader</string>
    <string name="remarks_EN">Remarks</string>
    <string name="time_NO">Tid</string>
    <string name="time_EN">Time</string>
    
    <!-- Preferanser   -->
    <string name="preferences">Instillinger</string>
    
    <string name="pref_my_airport_key">Min flyplass</string>
    <string name="pref_my_airport_title">Min flyplass</string>
    <string name="pref_my_airport_sum">Her kan du velge din prefererte flyplass.</string>
    
    <string name="pref_update_interval_key">updateInterval</string>
    <string name="pref_update_interval_title">Oppdateringsintervall</string>
    <string name="pref_update_interval_sum">Valg hvor ofte man skal oppdatere data i minutter.(min:3 max:15)</string>
    
</resources>
