<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_airport" 
        android:title="@string/airport" 
        android:icon="@drawable/airport" />

    <item android:id="@+id/menu_arrival" 
        android:title="@string/arrival"
        android:icon="@drawable/arrival" />
        
    <item android:id="@+id/menu_departure" 
        android:title="@string/departures_NO"
        android:icon="@drawable/departure" />
        
    <item android:id="@+id/menu_preferences" 
        android:title="@string/preferences"
        android:icon="@android:drawable/ic_menu_preferences" />
        
<!--    <item android:id="@+id/menu_sync" -->
<!--        android:title="@string/sync"-->
<!--        android:icon="@drawable/ic_menu_refresh" />-->

</menu>
